--- a/src/scss/framework/_materialize.scss
+++ b/src/scss/framework/_materialize.scss
@@ -19,15 +19,15 @@
 @import "components/typography";
 // @import "components/transitions";
 // @import "components/cards";
-// @import "components/toast";
-// @import "components/tabs";
+@import "components/toast";
+@import "components/tabs";
 // @import "components/tooltip";
 // @import "components/buttons";
-// @import "components/dropdown";
+@import "components/dropdown";
 // @import "components/waves";
 @import "components/modal";
 // @import "components/collapsible";
-// @import "components/chips";
+@import "components/chips";
 // @import "components/materialbox";
 // @import "components/forms/forms";
 // @import "components/table_of_contents";
@@ -37,5 +37,5 @@
 // @import "components/carousel";
 // @import "components/tapTarget";
 // @import "components/pulse";
-// @import "components/datepicker";
+@import "components/datepicker";
 // @import "components/timepicker";
