--- a/src/scss/parts/_buttons.scss
+++ b/src/scss/parts/_buttons.scss
@@ -13,6 +13,13 @@
     background-size: 10px auto;
     color: #fff;
     white-space: nowrap;
+    cursor: pointer;
+    margin-right: 10px;
+
+    &.right{
+        margin-right: 0;
+        margin-left: 10px;
+    }
 
     &:hover{
         background-color: #333;
