--- a/src/scss/pages/_profile.scss
+++ b/src/scss/pages/_profile.scss
@@ -236,6 +236,8 @@
             padding-top: 65%;
             background-size: cover;
             position: relative;
+            margin-bottom: 30px;
+            margin-top: 10px;
 
             & .overlay{
                 position: absolute;
