--- a/src/scss/parts/_footer.scss
+++ b/src/scss/parts/_footer.scss
@@ -84,5 +84,39 @@ footer{
             display: block;
             // height: 40px;
         }
+
+        & .footer-success{
+
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 40px 0;
+
+            & i{
+                font-size:48px;
+                display: inline-block;
+                position: relative;
+                line-height: 48px;
+
+                &:after{
+                    content: '';
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, calc(-50% + 1px));
+                    width: 39px;
+                    height: 39px;
+                    border-radius: 50%;
+                    background: #fff;
+                    z-index: -1;
+                }
+            }
+
+            & p{
+                color: #fff;
+                margin: 6px 0;
+            }
+        }
     }
 }
