--- a/release/css/master.css
+++ b/release/css/master.css
@@ -2788,6 +2788,37 @@ small {
       .tabs .tab a {
         padding: 0 12px; } }
 
+.material-tooltip {
+  padding: 10px 8px;
+  font-size: 1rem;
+  z-index: 2000;
+  background-color: transparent;
+  border-radius: 2px;
+  color: #fff;
+  min-height: 36px;
+  line-height: 120%;
+  opacity: 0;
+  position: absolute;
+  text-align: center;
+  max-width: calc(100% - 4px);
+  overflow: hidden;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  visibility: hidden;
+  background-color: #323232; }
+
+.backdrop {
+  position: absolute;
+  opacity: 0;
+  height: 7px;
+  width: 14px;
+  border-radius: 0 0 50% 50%;
+  background-color: #323232;
+  z-index: -1;
+  transform-origin: 50% 0%;
+  visibility: hidden; }
+
 .dropdown-content {
   background-color: #fff;
   margin: 0;
@@ -5655,7 +5686,7 @@ header {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 20;
+  z-index: 500;
   background: #fafafa;
   width: fit-content; }
   @media (max-width: 700px) {
@@ -5796,6 +5827,17 @@ header {
       @media (max-width: 700px) {
         header nav .nav-actions {
           display: none; } }
+    header nav .mobile-searcher {
+      position: fixed;
+      top: 0;
+      right: 54px;
+      width: 54px;
+      line-height: 54px;
+      text-align: center;
+      font-size: 21px; }
+      @media (min-width: 700px) {
+        header nav .mobile-searcher {
+          display: none; } }
 
 body {
   padding-left: 62px; }
@@ -5824,6 +5866,9 @@ body {
     transition: transform .4s, opacity .4s;
     opacity: 0;
     transform: translateY(40px); }
+    @media (max-width: 800px) {
+      .searcher .form-wrapper {
+        width: calc(100vw - 6rem); } }
     .searcher .form-wrapper .input-field input, .searcher .form-wrapper .input-field label {
       font-size: 32px; }
     .searcher .form-wrapper .input-field input {
@@ -5847,6 +5892,102 @@ body {
     width: 320px; }
   .modal#city-selector {
     width: 320px; }
+
+.filters {
+  margin: 20px 0;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap; }
+  .filters .filters-block {
+    display: inline-block;
+    position: relative;
+    background: #e4e4e4;
+    border: 1px sold #e4e4e4;
+    line-height: 26px;
+    margin-bottom: 6px;
+    margin-right: 6px; }
+    .filters .filters-block.reset-wrapper {
+      border: 0; }
+      .filters .filters-block.reset-wrapper input {
+        margin: 0; }
+    .filters .filters-block .current {
+      display: flex;
+      padding: 6px 12px; }
+      .filters .filters-block .current .key, .filters .filters-block .current .value, .filters .filters-block .current .reset-wrapper {
+        padding: 0 4px; }
+    .filters .filters-block.check input {
+      display: none; }
+      .filters .filters-block.check input ~ label {
+        user-select: none;
+        cursor: pointer; }
+        .filters .filters-block.check input ~ label:after {
+          content: '\F0131';
+          font-family: 'Material Design Icons';
+          padding-left: 5px; }
+      .filters .filters-block.check input:checked ~ label:after {
+        content: '\F0135'; }
+    .filters .filters-block .values {
+      opacity: 0;
+      pointer-events: none;
+      position: absolute;
+      z-index: 80;
+      background: #fff;
+      top: 100%;
+      min-width: 100%;
+      margin: 0;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+      border-radius: 4px;
+      overflow: hidden; }
+      .filters .filters-block .values label, .filters .filters-block .values a {
+        display: block;
+        line-height: 36px;
+        padding: 0 10px;
+        cursor: pointer; }
+        .filters .filters-block .values label:hover, .filters .filters-block .values a:hover {
+          background-color: #f3f3f3; }
+      .filters .filters-block .values .input-field-check {
+        display: block; }
+        .filters .filters-block .values .input-field-check input {
+          display: none; }
+          .filters .filters-block .values .input-field-check input ~ label:before {
+            padding-right: 6px;
+            content: '\F012C';
+            font-family: 'Material Design Icons';
+            color: transparent; }
+          .filters .filters-block .values .input-field-check input:checked ~ label:before {
+            color: #333; }
+      .filters .filters-block .values .minmax-block {
+        display: flex;
+        min-width: 170px; }
+        @media (max-width: 600px) {
+          .filters .filters-block .values .minmax-block {
+            flex-wrap: wrap; }
+            .filters .filters-block .values .minmax-block > label {
+              width: 100%; }
+            .filters .filters-block .values .minmax-block .min, .filters .filters-block .values .minmax-block .max {
+              width: 40%; }
+              .filters .filters-block .values .minmax-block .min input, .filters .filters-block .values .minmax-block .max input {
+                width: 100% !important;
+                height: 40px !important;
+                margin: 0; } }
+        .filters .filters-block .values .minmax-block:hover {
+          background-color: #f3f3f3; }
+        .filters .filters-block .values .minmax-block label {
+          width: 130px; }
+        .filters .filters-block .values .minmax-block .min input, .filters .filters-block .values .minmax-block .max input {
+          display: block;
+          width: 80px;
+          height: 100%;
+          border: 1px solid #eee;
+          background: transparent; }
+          .filters .filters-block .values .minmax-block .min input::-webkit-outer-spin-button, .filters .filters-block .values .minmax-block .min input::-webkit-inner-spin-button, .filters .filters-block .values .minmax-block .max input::-webkit-outer-spin-button, .filters .filters-block .values .minmax-block .max input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0; }
+          .filters .filters-block .values .minmax-block .min input:focus, .filters .filters-block .values .minmax-block .max input:focus {
+            outline: none; }
+    .filters .filters-block:hover .values {
+      opacity: 1;
+      pointer-events: all; }
 
 #main #hero {
   min-height: 100vh;
@@ -6504,3 +6645,30 @@ div#gallery .gallery-entry .image, div#author .gallery-entry .image {
     box-shadow: 0 0 0 1px #AA9859 inset; }
     #profile #communications .message-author:hover .actions .remove-action, #profile #communications .message-author.active .actions .remove-action {
       opacity: 1; }
+
+#register .avatar-holder input[type="file"] {
+  display: none; }
+
+#register .avatar-holder .avatar {
+  display: block;
+  width: 80px;
+  height: 80px;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer; }
+  #register .avatar-holder .avatar .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 80px;
+    text-align: center;
+    font-size: 21px;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    opacity: 0;
+    transition: opacity .2s; }
+  #register .avatar-holder .avatar:hover .overlay {
+    opacity: 1; }
