--- a/release/css/master.css
+++ b/release/css/master.css
@@ -4059,6 +4059,28 @@ button.swiper-pagination-bullet {
       line-height: 46px;
       padding: 0 20px; } }
 
+.floating-action-button {
+  position: fixed;
+  z-index: 3;
+  bottom: 30px;
+  right: 30px;
+  font-size: 18px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 36px;
+  text-align: center;
+  border-radius: 50%;
+  background: #000;
+  color: #fff !important;
+  transition: box-shadow .3s, transform .3s;
+  border: 2px solid transparent;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); }
+  .floating-action-button:hover {
+    transform: scale(1.3, 1.3);
+    border: 2px solid #AA9859;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.4); }
+
 footer {
   margin-top: 50px;
   background: #787878;
@@ -5891,7 +5913,8 @@ body {
   .modal#login {
     width: 320px; }
   .modal#city-selector {
-    width: 320px; }
+    width: 320px;
+    overflow-y: visible; }
 
 .filters {
   margin: 20px 0;
@@ -6646,29 +6669,50 @@ div#gallery .gallery-entry .image, div#author .gallery-entry .image {
     #profile #communications .message-author:hover .actions .remove-action, #profile #communications .message-author.active .actions .remove-action {
       opacity: 1; }
 
-#register .avatar-holder input[type="file"] {
-  display: none; }
+#register .avatar-holder {
+  display: flex; }
+  #register .avatar-holder .file-selected {
+    box-shadow: 0 0 0 2px #AA9859 inset; }
+  #register .avatar-holder .filename-wrapper {
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    flex-grow: 1; }
+    #register .avatar-holder .filename-wrapper #filename {
+      display: block;
+      overflow: hidden;
+      max-width: 100%;
+      text-overflow: ellipsis; }
+  #register .avatar-holder input[type="file"] {
+    display: none; }
+  #register .avatar-holder .avatar {
+    display: block;
+    width: 80px;
+    height: 80px;
+    flex-shrink: 0;
+    padding: 0;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer; }
+    #register .avatar-holder .avatar .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      line-height: 80px;
+      text-align: center;
+      font-size: 21px;
+      background: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      opacity: 0;
+      transition: opacity .2s; }
+    #register .avatar-holder .avatar:hover .overlay {
+      opacity: 1; }
 
-#register .avatar-holder .avatar {
-  display: block;
-  width: 80px;
-  height: 80px;
-  padding: 0;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer; }
-  #register .avatar-holder .avatar .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    line-height: 80px;
-    text-align: center;
-    font-size: 21px;
-    background: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    opacity: 0;
-    transition: opacity .2s; }
-  #register .avatar-holder .avatar:hover .overlay {
-    opacity: 1; }
+#register #selected-city i {
+  font-style: normal; }
+  #register #selected-city i#city {
+    color: #AA9859; }
