--- a/src/scss/parts/_buttons.scss
+++ b/src/scss/parts/_buttons.scss
@@ -58,3 +58,28 @@
         }
     }
 }
+
+.floating-action-button{
+    position: fixed;
+    z-index: 3;
+    bottom: 30px;
+    right: 30px;
+    font-size: 18px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 36px;
+    text-align: center;
+    border-radius: 50%;
+    background: #000;
+    color: #fff !important;
+    transition: box-shadow .3s, transform .3s;
+    border: 2px solid transparent;
+    box-shadow: 0 2px 4px rgba(black, .4);
+    
+    &:hover{
+        transform: scale(1.3, 1.3);
+        border: 2px solid $gold;
+        box-shadow: 0 5px 8px rgba(black, .4);
+    }
+}
