--- a/release/css/master.css
+++ b/release/css/master.css
@@ -3018,6 +3018,41 @@ body.keyboard-focused .dropdown-content li:focus {
   font-size: 0.8rem;
   transform: translateY(-140%); }
 
+.materialboxed {
+  display: block;
+  cursor: zoom-in;
+  position: relative;
+  transition: opacity .4s;
+  -webkit-backface-visibility: hidden; }
+  .materialboxed:hover:not(.active) {
+    opacity: .8; }
+  .materialboxed.active {
+    cursor: zoom-out; }
+
+#materialbox-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #292929;
+  z-index: 1000;
+  will-change: opacity; }
+
+.materialbox-caption {
+  position: fixed;
+  display: none;
+  color: #fff;
+  line-height: 50px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  padding: 0% 15%;
+  height: 50px;
+  z-index: 1000;
+  -webkit-font-smoothing: antialiased; }
+
 .sidenav {
   position: fixed;
   width: 300px;
@@ -5711,6 +5746,39 @@ header {
   z-index: 500;
   background: #fafafa;
   width: fit-content; }
+  header .favs, header .favs-mobile {
+    display: inline-block;
+    font-size: 21px;
+    position: relative;
+    padding-right: 20px; }
+    header .favs .count, header .favs-mobile .count {
+      box-shadow: 0 0 0 1px #AA9859 inset;
+      background: #fff;
+      position: absolute;
+      font-size: 10px;
+      padding: 0 5px;
+      text-align: center;
+      border-radius: 50%;
+      line-height: 16px;
+      color: #AA9859;
+      font-weight: 700;
+      top: 0px;
+      right: 15px; }
+  header .favs-mobile {
+    position: fixed;
+    top: 0;
+    right: 108px;
+    padding-right: 0; }
+    header .favs-mobile a {
+      display: inline-block;
+      line-height: 54px;
+      height: 54px;
+      width: 54px;
+      text-align: center; }
+    header .favs-mobile .count {
+      right: 10px;
+      top: 12px;
+      background: black; }
   @media (max-width: 700px) {
     header {
       background: black;
@@ -5731,6 +5799,8 @@ header {
         color: #fff; } }
   @media (min-width: 700px) {
     header .sidenav-trigger {
+      display: none; }
+    header .favs-mobile {
       display: none; } }
   header nav {
     display: flex;
@@ -5813,7 +5883,8 @@ header {
           padding: 0 10px; }
       header nav .nav-actions .profile-menu {
         margin: 0;
-        display: inline-block; }
+        display: inline-block;
+        display: inline-flex; }
         header nav .nav-actions .profile-menu > li {
           position: relative;
           padding: 0 10px; }
