--- a/src/scss/parts/_nav.scss
+++ b/src/scss/parts/_nav.scss
@@ -9,6 +9,52 @@ header{
     background: $paper;
     width: fit-content;
 
+    & .favs{
+        display: inline-block;
+        font-size: 21px;
+        position: relative;
+        padding-right: 20px;
+
+        & .count{
+            box-shadow: 0 0 0 1px $gold inset;
+            background: #fff;
+            position: absolute;
+            font-size: 10px;
+            padding: 0 5px;
+            text-align: center;
+            border-radius: 50%;
+            line-height: 16px;
+            color: $gold;
+            font-weight: 700;
+            top: 0px;
+            right: 15px;
+        }
+    }
+
+    & .favs-mobile{
+
+        @extend .favs;
+
+        position: fixed;
+        top: 0;
+        right: 108px;
+        padding-right: 0;
+        
+        & a{
+            display: inline-block;
+            line-height: 54px;
+            height: 54px;
+            width: 54px;
+            text-align: center;
+        }
+
+        & .count{
+            right: 10px;
+            top: 12px;
+            background: black;
+        }
+    }
+
     @media(max-width: $mobile-edge){
         background: black;
         height: 54px;
@@ -33,6 +79,10 @@ header{
     @media(min-width: $mobile-edge){
 
         & .sidenav-trigger{
+            display: none;
+        }
+
+        & .favs-mobile{
             display: none;
         }
     }
@@ -162,6 +212,7 @@ header{
 
                 margin: 0;
                 display: inline-block;
+                display: inline-flex;
         
                 & > li{
                     
@@ -214,6 +265,7 @@ header{
                     pointer-events: all;
                 }
             }
+
 
             @media(max-width: $mobile-edge){
                 display: none;
