--- a/src/scss/parts/_nav.scss
+++ b/src/scss/parts/_nav.scss
@@ -130,7 +130,7 @@ header{
             left: 0;
             width: 61px;
             height: 61px;
-            background: url(/img/logo-header.svg) center center no-repeat;
+            background: url(../img/logo-header.svg) center center no-repeat;
 
             @media(max-width: $mobile-edge){
                 width: 54px;
