--- a/src/scss/pages/_authors.scss
+++ b/src/scss/pages/_authors.scss
@@ -71,7 +71,7 @@
         & .tags-wrapper{
             flex-grow: 1;
             padding: 0 10px;
-            white-space: wrap;
+            white-space: normal;
             width: 25%;
         }
 
