--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -5,7 +5,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background: $paper url(/img/ll.svg) center center no-repeat;
+        background: $paper url(../img/ll.svg) center center no-repeat;
         background-size: auto 110%;
     
         & h1{
@@ -13,8 +13,8 @@
             border: 1px solid red;
             display: block;
             margin: 0;
-            mask: url(/img/gallerist.svg) center center no-repeat;
-            -webkit-mask: url(/img/gallerist.svg) no-repeat center center;
+            mask: url(../img/gallerist.svg) center center no-repeat;
+            -webkit-mask: url(../img/gallerist.svg) no-repeat center center;
             mask-size: 40vw auto;
             -webkit-mask-size: 40vw auto;
             background: black;
@@ -103,23 +103,23 @@
 
 @keyframes logo_animation{
     0%{
-        background: url(/img/1.jpg);
+        background: url(../img/1.jpg);
         background-position: center left;
     }
     25%{
-        background: url(/img/2.jpg);
+        background: url(../img/2.jpg);
         background-position: center right;
     }
     50%{
-        background: url(/img/3.jpg);
+        background: url(../img/3.jpg);
         background-position: top center;
     }
     75%{
-        background: url(/img/4.jpg);
+        background: url(../img/4.jpg);
         background-position: bottom center;
     }
     100%{
-        background: url(/img/1.jpg);
+        background: url(../img/1.jpg);
         background-position: center left;
     }
 }
