--- a/src/scss/parts/_buttons.scss
+++ b/src/scss/parts/_buttons.scss
@@ -7,7 +7,7 @@
     position: relative;
     overflow: hidden;
     transition: background-color .2s;
-    background-image: url(/img/btn-labe.svg);
+    background-image: url(../img/btn-labe.svg);
     background-position: bottom right;
     background-repeat: no-repeat;
     background-size: 10px auto;
