--- a/src/scss/parts/_filters.scss
+++ b/src/scss/parts/_filters.scss
@@ -10,7 +10,7 @@
         display: inline-block;
         position: relative;
         background: #e4e4e4;
-        border: 1px sold #e4e4e4;
+        border: 1px solid #e4e4e4;
         line-height: 26px;
         margin-bottom: 6px;
         margin-right: 6px;
