--- a/release/css/master.css
+++ b/release/css/master.css
@@ -6534,53 +6534,20 @@ div#gallery .gallery-entry .image, div#author .gallery-entry .image {
     #profile .profile-gallery-wrapper .date, #profile .profile-gallery-wrapper .size, #profile .profile-gallery-wrapper .price {
       display: none; } }
 
-@media (max-width: 1200px) {
-  #profile .editor {
-    display: none; } }
+#profile .profile-gallery-entry.inactive > *:not(.actions) {
+  filter: grayscale(1);
+  opacity: .5; }
 
-#profile .editor .editor-image {
-  margin-top: 40px;
-  padding-top: 65%;
-  background-size: cover;
-  background-position: center;
-  margin-bottom: 20px;
-  position: relative; }
-  #profile .editor .editor-image .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.4);
-    opacity: 0;
-    transition: opacity .2s; }
-    #profile .editor .editor-image .overlay .actions {
-      width: 100%;
-      text-align: center; }
-      #profile .editor .editor-image .overlay .actions a {
-        display: inline-block;
-        color: #fff;
-        font-size: 26px;
-        line-height: 40px;
-        padding: 0 10px;
-        background: rgba(0, 0, 0, 0.4);
-        border-radius: 4px;
-        transition: background-color .2s; }
-        #profile .editor .editor-image .overlay .actions a:hover {
-          background: rgba(0, 0, 0, 0.7); }
-  #profile .editor .editor-image:hover .overlay {
-    opacity: 1; }
-
-#profile .editor .section-header {
-  font-family: 'Lora';
-  font-weight: 700;
-  font-size: 26px;
-  margin: 16px 0; }
-
-#profile .editor .entry-actions {
-  margin: 20px 0; }
+#profile .profile-gallery-entry .actions a {
+  padding: 0 6px;
+  font-size: 21px; }
+  #profile .profile-gallery-entry .actions a.publish-indicator {
+    display: inline-block;
+    font-family: 'Material Design Icons'; }
+    #profile .profile-gallery-entry .actions a.publish-indicator.inactive:before {
+      content: '\F06D1'; }
+    #profile .profile-gallery-entry .actions a.publish-indicator.active:before {
+      content: '\F06D0'; }
 
 #profile .chips {
   flex-wrap: wrap; }
@@ -6591,45 +6558,6 @@ div#gallery .gallery-entry .image, div#author .gallery-entry .image {
       content: '\F0156' !important;
       font-family: 'Material Design Icons';
       font-style: normal; }
-
-#profile #gallery-editor {
-  padding: .75rem 1.5rem;
-  padding-bottom: 80px; }
-  #profile #gallery-editor .image-editor {
-    padding-top: 65%;
-    background-size: cover;
-    position: relative;
-    margin-bottom: 30px;
-    margin-top: 10px; }
-    #profile #gallery-editor .image-editor .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      display: flex;
-      flex-direction: column;
-      justify-content: center; }
-      #profile #gallery-editor .image-editor .overlay .actions {
-        text-align: center; }
-        #profile #gallery-editor .image-editor .overlay .actions a {
-          display: inline-block;
-          color: #fff;
-          font-size: 21px;
-          line-height: 40px;
-          width: 40px;
-          border-radius: 4px;
-          background-color: rgba(0, 0, 0, 0.7); }
-  #profile #gallery-editor .editor-actions {
-    text-align: center; }
-    #profile #gallery-editor .editor-actions a {
-      display: inline-block;
-      padding: 0 20px;
-      margin: 0;
-      font-size: 21px; }
-      #profile #gallery-editor .editor-actions a i {
-        margin: 0; }
 
 #profile #communications .communications-header {
   font-size: 21px;
