--- a/src/scss/pages/_profile.scss
+++ b/src/scss/pages/_profile.scss
@@ -145,73 +145,112 @@
         }
     }
 
-    & .editor{
+    .profile-gallery-entry{
 
-        @media(max-width: $large){
-            display: none;
+        &.inactive{
+                
+            & > *:not(.actions){
+                filter: grayscale(1);
+                opacity: .5;
+            }
         }
 
-        & .editor-image{
-            margin-top: 40px;
-            padding-top: 65%;
-            background-size: cover;
-            background-position: center;
-            margin-bottom: 20px;
-            position: relative;
+        & .actions{
+            
+            & a{
+
+                padding: 0 6px;
+                font-size: 21px;
+                
+                &.publish-indicator{
+                    display: inline-block;
+                    font-family: 'Material Design Icons';
     
-            & .overlay{
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                background: rgba(black, .4);
-                opacity: 0;
-                transition: opacity .2s;
+                    &.inactive{
     
-                & .actions{
-    
-                    width: 100%;
-                    text-align: center;
-    
-                    & a{
-                        display: inline-block;
-                        color: #fff;
-                        font-size: 26px;
-                        line-height: 40px;
-                        padding: 0 10px;
-                        background: rgba(black, .4);
-                        border-radius: 4px;
-                        transition: background-color .2s;
-    
-                        &:hover{
-                            background: rgba(black, .7);
+                        &:before{
+                            content: '\F06D1';
+                        }
+                    }
+                    
+                    &.active{
+                        
+                        &:before{
+                            content: '\F06D0';
                         }
                     }
                 }
             }
-    
-            &:hover{
-    
-                & .overlay{
-                    opacity: 1;
-                }
-            }
-        }
-    
-        & .section-header{
-            font-family: 'Lora';
-            font-weight: 700;
-            font-size: 26px;
-            margin: 16px 0;
-        }
-    
-        & .entry-actions{
-            margin: 20px 0;
         }
     }
+
+    // & .editor{
+
+    //     @media(max-width: $large){
+    //         display: none;
+    //     }
+
+    //     & .editor-image{
+    //         margin-top: 40px;
+    //         padding-top: 65%;
+    //         background-size: cover;
+    //         background-position: center;
+    //         margin-bottom: 20px;
+    //         position: relative;
+    
+    //         & .overlay{
+    //             position: absolute;
+    //             top: 0;
+    //             left: 0;
+    //             width: 100%;
+    //             height: 100%;
+    //             display: flex;
+    //             align-items: center;
+    //             background: rgba(black, .4);
+    //             opacity: 0;
+    //             transition: opacity .2s;
+    
+    //             & .actions{
+    
+    //                 width: 100%;
+    //                 text-align: center;
+    
+    //                 & a{
+    //                     display: inline-block;
+    //                     color: #fff;
+    //                     font-size: 26px;
+    //                     line-height: 40px;
+    //                     padding: 0 10px;
+    //                     background: rgba(black, .4);
+    //                     border-radius: 4px;
+    //                     transition: background-color .2s;
+    
+    //                     &:hover{
+    //                         background: rgba(black, .7);
+    //                     }
+    //                 }
+    //             }
+    //         }
+    
+    //         &:hover{
+    
+    //             & .overlay{
+    //                 opacity: 1;
+    //             }
+    //         }
+    //     }
+    
+    //     & .section-header{
+    //         font-family: 'Lora';
+    //         font-weight: 700;
+    //         font-size: 26px;
+    //         margin: 16px 0;
+    //     }
+    
+    //     & .entry-actions{
+    //         margin: 20px 0;
+    //     }
+    // }
 
     & .chips{
 
@@ -234,61 +273,61 @@
         }
     }
 
-    & #gallery-editor{
-        padding: .75rem 1.5rem;
-        padding-bottom: 80px;
+    // & #gallery-editor{
+    //     padding: .75rem 1.5rem;
+    //     padding-bottom: 80px;
 
-        & .image-editor{
-            padding-top: 65%;
-            background-size: cover;
-            position: relative;
-            margin-bottom: 30px;
-            margin-top: 10px;
+    //     & .image-editor{
+    //         padding-top: 65%;
+    //         background-size: cover;
+    //         position: relative;
+    //         margin-bottom: 30px;
+    //         margin-top: 10px;
 
-            & .overlay{
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: rgba(black, .7);
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+    //         & .overlay{
+    //             position: absolute;
+    //             top: 0;
+    //             left: 0;
+    //             width: 100%;
+    //             height: 100%;
+    //             background: rgba(black, .7);
+    //             display: flex;
+    //             flex-direction: column;
+    //             justify-content: center;
 
-                & .actions{
+    //             & .actions{
 
-                    text-align: center;
+    //                 text-align: center;
 
-                    & a{
-                        display: inline-block;
-                        color: #fff;
-                        font-size: 21px;
-                        line-height: 40px;
-                        width: 40px;
-                        border-radius: 4px;
-                        background-color: rgba(black, .7);
-                    }
-                }
-            }
-        }
+    //                 & a{
+    //                     display: inline-block;
+    //                     color: #fff;
+    //                     font-size: 21px;
+    //                     line-height: 40px;
+    //                     width: 40px;
+    //                     border-radius: 4px;
+    //                     background-color: rgba(black, .7);
+    //                 }
+    //             }
+    //         }
+    //     }
 
-        & .editor-actions{
+    //     & .editor-actions{
 
-            text-align: center;
+    //         text-align: center;
 
-            & a{
-                display: inline-block;
-                padding: 0 20px;
-                margin: 0;
-                font-size: 21px;
+    //         & a{
+    //             display: inline-block;
+    //             padding: 0 20px;
+    //             margin: 0;
+    //             font-size: 21px;
 
-                & i{
-                    margin:0
-                }
-            }
-        }
-    }
+    //             & i{
+    //                 margin:0
+    //             }
+    //         }
+    //     }
+    // }
 
     & #communications{
         
