--- a/release/css/master.css
+++ b/release/css/master.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .materialize-red {
   background-color: #e51c23 !important; }
 
@@ -5309,6 +5310,25 @@ textarea.hidden-input {
 .sidenav .input-field {
   line-height: 1.5rem; }
 
+input[type="range"] {
+  -webkit-appearance: none;
+  background: transparent;
+  width: 100%; }
+  input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: 1px solid black;
+    background: #AA9859;
+    width: 20px;
+    height: 20px;
+    transform: translateY(-25%);
+    transition: transform .2s;
+    border-radius: 2px; }
+    input[type="range"]::-webkit-slider-thumb:hover {
+      transform: translateY(-25%) scale(1.6); }
+  input[type="range"]::-webkit-slider-runnable-track {
+    background: rgba(0, 0, 0, 0.4);
+    height: 10px; }
+
 body {
   color: #333;
   background-color: #fafafa; }
@@ -5337,12 +5357,22 @@ body {
     margin-bottom: 51px; }
   body h1.page-header {
     margin-top: 200px; }
-    @media (max-width: 600px) {
+    @media (max-width: 1900px) {
       body h1.page-header {
         margin-top: 100px; } }
+    @media (max-width: 600px) {
+      body h1.page-header {
+        margin-top: 60px; } }
   @media (max-width: 600px) {
     body h1 {
       font-size: 36px; } }
+  body h1 .subheader {
+    display: block;
+    font-size: 32px;
+    line-height: 32px; }
+    @media (max-width: 600px) {
+      body h1 .subheader {
+        font-size: 18px; } }
   body h2 {
     font-size: 46px;
     padding-bottom: 30px; }
@@ -6175,10 +6205,7 @@ body {
     background-position: center left; } }
 
 #product .data-wrapper {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
+  height: 100%; }
   #product .data-wrapper .chars {
     display: flex;
     flex-wrap: wrap;
@@ -6212,6 +6239,8 @@ body {
         display: inline; }
       #product .data-wrapper .chars span {
         display: none; } }
+  #product .data-wrapper p:first-of-type {
+    margin-top: 0; }
   #product .data-wrapper .author-data {
     margin-bottom: 40px;
     display: flex; }
@@ -6723,3 +6752,15 @@ div#gallery .gallery-entry .image, div#author .gallery-entry .image {
   font-style: normal; }
   #register #selected-city i#city {
     color: #AA9859; }
+
+#image-degree ~ * .value {
+  display: block;
+  text-align: center;
+  margin-top: 6px; }
+  #image-degree ~ * .value:after {
+    content: '°'; }
+
+#image-scale ~ * .value {
+  display: block;
+  text-align: center;
+  margin-top: 6px; }
