--- a/release/css/master.css
+++ b/release/css/master.css
@@ -4080,6 +4080,8 @@ button.swiper-pagination-bullet {
     color: #fff; }
   .btn .black-text, .datepicker-container .datepicker-footer button .black-text {
     color: #000; }
+  .btn.btn-red, .datepicker-container .datepicker-footer button.btn-red {
+    background-color: #af0000; }
   .btn.btn-flat, .datepicker-container .datepicker-footer button.btn-flat {
     background-color: rgba(0, 0, 0, 0.05);
     color: black; }
