--- a/src/scss/parts/_buttons.scss
+++ b/src/scss/parts/_buttons.scss
@@ -34,6 +34,10 @@
         color: #000;
     }
 
+    &.btn-red{
+        background-color: rgb(175, 0, 0);
+    }
+
     &.btn-flat{
         background-color: rgba(black, .05);
         color: black;
